fix: swagger annotations
